alignment fix for about

--- a/portfolio-webpp/src/components/helper/ContactCard.scss
+++ b/portfolio-webpp/src/components/helper/ContactCard.scss
@@ -1,72 +1,69 @@
-.contact__card {
+.card {
   width: 100%;
-  height: 82.2vh;
+  display: flex;
+  justify-content: space-around;
+  column-gap: 1em;
 
-  .card {
-    display: flex;
-    justify-content: space-around;
-    column-gap: 1em;
+  .card__details {
+    position: relative;
+    align-self: center;
+    width: 70%;
 
-    .card__details {
-      position: relative;
-      align-self: center;
-      width: 40%;
-
-      .home_btn {
-        display: flex;
-        float: inline-start;
-        justify-content: space-around;
-        column-gap: 1em;
-        button {
-          border: none;
-          font-size: 1rem;
-        }
-
-        .contact__btn {
-          display: inline-block;
-          background: linear-gradient(
-            to right,
-            rgb(222 24 160),
-            #61ce61,
-            #4d4adc
-          );
-          color: #171414;
-          padding: 0.75rem 2.5rem;
-          font-weight: 600;
-          border-radius: 2rem;
-          transition: 0.3s;
-          align-self: center;
-
-          &:hover {
-            color: rgb(232, 205, 205);
-            background-color: hsl(62, 64%, 47%);
-            box-shadow: 10px 10px 10px rgba(4, 224, 37, 0.15);
-          }
-        }
+    .home_btn {
+      display: flex;
+      float: inline-start;
+      justify-content: space-around;
+      column-gap: 1em;
+      button {
+        border: none;
+        font-size: 1rem;
       }
 
-      .home__title {
-        font-size: 2rem;
-        p {
-          font-size: 1.5rem;
-          color: rgb(243 241 246 / 78%);
-        }
+      .contact__btn {
+        display: inline-block;
+        background: linear-gradient(
+          to right,
+          rgb(222 24 160),
+          #61ce61,
+          #4d4adc
+        );
+        color: #171414;
+        padding: 0.75rem 2.5rem;
+        font-weight: 600;
+        border-radius: 2rem;
+        transition: 0.3s;
+        align-self: center;
 
-        &__color {
-          color: #f0dd09;
+        &:hover {
+          color: rgb(232, 205, 205);
+          background-color: hsl(62, 64%, 47%);
+          box-shadow: 10px 10px 10px rgba(4, 224, 37, 0.15);
         }
       }
     }
 
-    .profile__pic {
-      width: 600px;
-      height: 500px;
-
-      .photo {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+    .home__title {
+      font-size: 2rem;
+      p {
+        font-size: 1.5rem;
+        color: rgb(243 241 246 / 78%);
       }
+
+      &__color {
+        color: #f0dd09;
+      }
+    }
+  }
+
+  .profile__pic {
+    width: 600px;
+    height: 500px;
+
+    .photo {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 15px;
     }
   }
 }
